fix cat position mobile

--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -9786,6 +9786,10 @@ Images
   .profile--loaded .profile-body {
     width: 100%;
   }
+  .profile--loaded.--active .picture__container .barrel__container {
+    top: 12rem;
+    left: 2.5rem;
+  }
 }
 
 /** Colors */
